remove another 8887 reference
Monotone-Parent: ac4141885048ed1392e0a780ed1140b8f8db1ca8
Monotone-Revision: f42d02067d4fb58b86ffb79222a285f26c3a2628

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-11-24T20:22:31
Monotone-Branch: i2p.i2p

--- a/installer/resources/readme/readme.html
+++ b/installer/resources/readme/readme.html
@@ -73,7 +73,7 @@ up, you can:</p>
 <h2><a name="trouble">Troubleshooting</a></h2>
 <p>Be patient - I2P may be slow to start the first time as it searches for peers. 
   If, after 30 minutes, your Active: connected/recent count has less than 10 connected 
-  peers, you should open port 8887 on your firewall for better connectivity. If 
+  peers, you should open I2P's port on your firewall for better connectivity. If 
   you cannot see any eepsites at all (even <a href="http://www.i2p2.i2p/">www.i2p2.i2p</a>), 
   be sure your browser proxy is set to 127.0.0.1 port 4444. You may also want 
   to review the information on the <a href="http://www.i2p2.i2p/">I2P website</a>, 
