--- a/installer/resources/readme/readme_zh.html
+++ b/installer/resources/readme/readme_zh.html
@@ -35,4 +35,4 @@
 
 <h2><a name="trouble">疑难解答</a></h2>
 
-<p>保持耐心 - I2P 第一次启动时需要搜索节点，可能比较缓慢。如果30分钟后，您的活动节点计数仍在 10 个节点以下, 请在防火墙中打开 8887 端口改善连接性能。如果您根本无法打开任何EEPSITE(甚至 <a href="http://www.i2p2.i2p/index_zh.html">www.i2p2.i2p</a>)，检查您的浏览器代理设置是否为本地的 127.0.0.1:4444。你也可以到&nbsp;<a href="http://www.i2p2.i2p/index_zh.html">I2P 网站</a>&nbsp;查找信息, 在 <a href="http://forum.i2p2.de/">I2P 论坛</a> 中发帖, 来 <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a> , irc.postman.i2p 或 irc.freshcoffee.i2p 上的 #i2p 或 #i2p-chat 这两个 IRC 频道上询问。 (这些服务器上的这两个频道是相通的)。</p><hr>
+<p>保持耐心 - I2P 第一次启动时需要搜索节点，可能比较缓慢。如果30分钟后，您的活动节点计数仍在 10 个节点以下, 请在防火墙中打开 I2P端口(见 I2P内部设置>网络 下的IP与传输设置一节)改善连接性能。如果您根本无法打开任何EEPSITE(甚至 <a href="http://www.i2p2.i2p/index_zh.html">www.i2p2.i2p</a>)，检查您的浏览器代理设置是否为本地的 127.0.0.1:4444。你也可以到&nbsp;<a href="http://www.i2p2.i2p/index_zh.html">I2P 网站</a>&nbsp;查找信息, 在 <a href="http://forum.i2p2.de/">I2P 论坛</a> 中发帖, 来 <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a> , irc.postman.i2p 或 irc.freshcoffee.i2p 上的 #i2p 或 #i2p-chat 这两个 IRC 频道上询问。 (这些服务器上的这两个频道是相通的)。</p><hr>
