Russian translation update
Monotone-Parent: a3463253dc35526787c20e3446248ad5f69b0985
Monotone-Revision: 4526c793eb8c3322ddf112781f8403ab3ee7d5bd

Monotone-Author: forget@mail.i2p
Monotone-Date: 2010-01-09T03:01:04
Monotone-Branch: i2p.i2p

--- a/installer/resources/readme/readme_ru.html
+++ b/installer/resources/readme/readme_ru.html
@@ -8,9 +8,9 @@
     <a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
 </div>
 <div class="welcome"><h2>Добро пожаловать в I2P!</h2></div>
-<p>Когда Вы запускаете I2P впервые — числа в графе «Active» (слева) начнут расти постепенно, это может занять несколько минут. Затем в списке «Local Destinations» появится запись «shared clients» (если этого не случилось, <a href="#trouble">см. «устранение неполадок»</a>).
+<p>Когда Вы запускаете I2P впервые — числа в графе «Активные» (слева) начнут расти постепенно, это может занять несколько минут. Затем в списке «Локальные туннели» появится запись «коллективные клиенты» (если этого не случилось, <a href="#trouble">см. «устранение неполадок»</a>).
 
-<p>После появления записи «shared clients» Вы можете:</p>
+<p>После появления записи «коллективные клиенты» Вы можете:</p>
 <ul>
 	
 	<li><b>Просматривать I2P-сайты</b> (веб-сайты хостящиеся анонимно внутри I2P сети). Для этого настройте в Вашем браузере <b>HTTP прокси-сервер 127.0.0.1 порт 4444</b>. С этими настройками попробуйте зайти на I2P-сайты по ссылкам ниже:<br>
@@ -48,14 +48,14 @@
 
 Просто поместите свои файлы в директорию <code>eepsite/docroot/</code> (<code>.war</code>-файлы JSP/сервлетов в директорию <code>eepsite/webapps/</code>, а CGI-скрипты в директорию <code>eepsite/cgi-bin/</code>).
 
-После этого достаточно запустить i2p-туннель <a href="/i2ptunnel/">«eepsite tunnel»</a>, указывающий на Ваш сайт, и он станет доступным для других пользователей.</p>
+После этого достаточно запустить туннель <a href="/i2ptunnel/">«I2P webserver»</a>, указывающий на Ваш сайт, и он станет доступным для других пользователей.</p>
 
 <p>Подробную пошаговую инструкцию Вы можете найти на <a href="http://127.0.0.1:7658/">временной страничке-заготовке Вашего сайта</a>.</ps>
 
 <h2><a name="trouble">Поиск и устранение неполадок</a></h2>
 <p>Наберитесь терпения — первый старт I2P может занять до получаса из-за начального поиска пиров.
 
-<p>Если через 30 минут в графе «Active» все еще меньше 10 подсоединенных пиров, то для повышения качества соединения Вам нужно открыть порт для I2P на Вашем файерволе или роутере (используемый номер порта можно посмотреть на <a href="/config.jsp">странице настроек</a>).</p>
+<p>Если через 30 минут в графе «Активные» все еще меньше 10 подсоединенных пиров, то для повышения качества соединения Вам нужно открыть порт для I2P на Вашем файерволе или роутере (используемый номер порта можно посмотреть на <a href="/config.jsp">странице настроек</a>).</p>
 
 <p>Если Вы не можете соединиться ни с одним I2P-сайтом (даже <a href="http://www.i2p2.i2p/">www.i2p2.i2p</a>), проверьте, включен ли в Вашем браузере HTTP-прокси 127.0.0.1 порт 4444.</p>
 
