tweaks; include new translated eepsite pages in pkg; -18-rc
Monotone-Parent: 4526c793eb8c3322ddf112781f8403ab3ee7d5bd
Monotone-Revision: 8dfddbd5818309c8db9434a91b4cfdbb1b79189b

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-01-09T14:26:01
Monotone-Branch: i2p.i2p

--- a/installer/resources/eepsite_index.html
+++ b/installer/resources/eepsite_index.html
@@ -6,7 +6,11 @@
  </head>
  <body>
  <h1>Welcome to your eepsite</h1>
-<p>(<a href="index_de.html">Deutsch</a>)</p>
+<p>
+(<a href="index_de.html">Deutsch</a>)
+(<a href="index_fr.html">French</a>)
+(<a href="index_ru.html">Russian</a>)
+</p>
  <p>This is your eepsite - simply edit the files under
  ~/.i2p/eepsite/docroot/ (Linux) or %APPDATA%\I2P\eepsite\docroot\ (Windows)
  and they'll be reachable by others once you follow the instructions below.
