Updated eepsite indexes with the new layout + pagetemplate.html
Monotone-Parent: d694a50c5790cca87a34332c8445e62c352ecbd7
Monotone-Revision: 083592a7f47d8287c75e35d44859280a2a6815bb

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-01-21T07:46:03
Monotone-Branch: i2p.i2p

--- a/installer/resources/eepsite.help/help/index_fr.html
+++ b/installer/resources/eepsite.help/help/index_fr.html
@@ -3,7 +3,7 @@
   <title>I2P serveur web anonyme | Bienvenue à votre eepsite</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link rel="shortcut icon" href="favicon.ico" />
-  <link rel="stylesheet" type="text/css" href="eepsite.css" />
+    <link rel="stylesheet" type="text/css" href="lib/eepsite.css" />
  </head>
  <body>
 <div class="fairylights">
