--- a/installer/resources/eepsite.help/help/index.html
+++ b/installer/resources/eepsite.help/help/index.html
@@ -1,30 +1,38 @@
 <html>
  <head>
-  <title>Welcome to your eepsite</title>
+  <title>I2P Anonymous Webserver | Welcome to your eepsite</title>
   <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="eepsite.css" />
+    <link rel="stylesheet" type="text/css" href="lib/eepsite.css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
  </head>
  <body>
- <h1>Welcome to your eepsite</h1>
-<p>
-(<a href="index_de.html">Deutsch</a>)
-(<a href="index_fr.html">French</a>)
-(<a href="index_ru.html">Russian</a>)
-</p>
- <p>This is your eepsite - simply edit the files under
- ~/.i2p/eepsite/docroot/ (Linux) or %APPDATA%\I2P\eepsite\docroot\ (Windows)
+<div class="fairylights">
+<div class="main">
+ <h1>I2P Anonymous Webserver</h1>
+<div class="langbar">
+<!-- Most of these languages listed here are yet to be translated -->
+<a href="index.html"><img src="lib/us.png" title="English" alt="English"></a> 
+<a href="index_na.html"><img src="lib/cn.png" title="Chinese" alt="Chinese"></a> 
+<a href="index_de.html"><img src="lib/de.png" title="Deutsch" alt="Deutsch"></a> 
+<a href="index_fr.html"><img src="lib/fr.png" title="Français" alt="Français"></a> 
+<a href="index_na.html"><img src="lib/nl.png" title="Nederlands" alt="Nederlands"></a> 
+<a href="index_na.html"><img src="lib/se.png" title="Svenska" alt="Svenska"></a> 
+
+</div>
+<h2>Quick Guide to Anonymous Webserving on I2P</h2>
+
+ <p>This is your eepsite, your own anonymous I2P webserver - simply edit the files under ./eepsite/docroot/ 
  and they'll be reachable by others once you follow the instructions below.
  In I2P, eepsites are addressed using a 'key', which is represented as a really long Base64 string.
  (The 'key' is somewhat analogous to an IP address, and
  is shown on the eepsite's I2PTunnel
  <a href="http://127.0.0.1:7657/i2ptunnel/edit.jsp?tunnel=3">configuration page</a>).
- The instructions below detail how to assign a name like "mysite.i2p" to your key and
- start up your eepsite.</p>
- <p>You can reach your eepsite locally through 
+ The instructions below detail how to assign a name like "mysite.i2p" to your key and start up your eepsite.</p>
+ <p>You can reach your eepsite locally via 
  <a href="http://127.0.0.1:7658/">http://127.0.0.1:7658/</a>.
 </p>
 
- <h2>Step-by-step instructions for starting your new eepsite and announcing it to the I2P community</h2>
+ <h2>How to set up and announce your eepsite</h2>
  Your eepsite is stopped by default.
  After you start it, it will be difficult for other people to find because it
  doesn't have a name and they don't have your really long Base64 key.
@@ -39,7 +47,7 @@
      <a href="http://127.0.0.1:7657/i2ptunnel/edit.jsp?tunnel=3">eepsite i2ptunnel configuration page</a>
      where it says "Website name". This will replace the default "mysite.i2p".
      Also, check the "Auto Start" box. Your eepsite will now start every time you start your router.
-     Be sure and click "Save".
+     Be sure to click "Save".
  <li>Click the start button for your eepsite on the
      <a href="http://127.0.0.1:7657/i2ptunnel/index.jsp">main i2ptunnel configuration page</a>.
      You should now see "eepsite" listed under "Local Destinations" on the left side of the
@@ -55,9 +63,9 @@
  <li>In your browser, enter in your eepsite name (<i>something</i>.i2p) and you should
      be right back here. Hopefully it worked.
  <li>Before you tell the world about your new eepsite, you should add some content.
-     Go to ~/.i2p/eepsite/docroot/ (Linux) or %APPDATA%\I2P\eepsite\docroot\ (Windows)
-     and copy this document (index.html) to help.html so you can refer to it later.
-     Now edit index.html and add content, pictures, and whatever you would like to share.
+     Go to i2p/eepsite/docroot and replace the index.html redirect page with your own content. Virtual folders work, so you can host files from a sub directory without explicitly needing to provide a page with links to files. If you need a template for a basic site, feel free to borrow and adapt <a href="pagetemplate.html">this page</a> and <a href="lib/">content</a>!
+</ul>
+<h2>Register your own .I2P Domain</h2><ul>
  <li>Now it's time to add your eepsite to an I2P address book hosted by a site
      such as <a href="http://stats.i2p/">stats.i2p</a>.
      That is, you must enter
@@ -68,16 +76,13 @@
      Be sure you get the whole thing, ending with "AAAA".
      Don't forget to click "add a key".
      Check to see if it reports the key was added.
-     Since many routers periodically get address book updates from these sites, within several hours others will be able to find your
-     website by simply typing <i>something</i>.i2p into their browser.
+     Since many routers periodically get address book updates from these sites, within several hours others will be able to find your website by simply typing <i>something</i>.i2p into their browser.
+</ul><h2>Adding Addressbook Subscriptions</h2><ul>
  <li>Speaking of address book updates, this would be a good time to add some more addressbooks
-     to your own subscription list. Go to your <a href="http://127.0.0.1:7657/susidns/subscriptions.jsp">subscriptions configuration page</a>
-     and add a couple of these -
-     <a href="http://tino.i2p/hosts.txt">http://tino.i2p/hosts.txt</a>,
-     <a href="http://stats.i2p/cgi-bin/newhosts.txt">http://stats.i2p/cgi-bin/newhosts.txt</a>,
-     <a href="http://i2host.i2p/cgi-bin/i2hostetag">http://i2host.i2p/cgi-bin/i2hostetag</a>,
-     and hit "Save".
-     Now you will get updates too!
+     to your own <a href="http://127.0.0.1:7657/susidns/subscriptions.jsp">subscription list</a>. Go to your subscriptions configuration page and add a couple of these for an automatically updated list of new hosts:<ul>
+     <li><a href="http://tino.i2p/hosts.txt">http://tino.i2p/hosts.txt</a>
+     <li><a href="http://stats.i2p/cgi-bin/newhosts.txt">http://stats.i2p/cgi-bin/newhosts.txt</a>
+     <li><a href="http://i2host.i2p/cgi-bin/i2hostetag">http://i2host.i2p/cgi-bin/i2hostetag</a></ul>
  <li>If you are in a hurry and can't wait a few hours, you can tell people to use a "jump" address helper redirection service.
      This will work within a few minutes of your entering the key to an address book on the same site.
      Test it yourself first by entering
@@ -99,11 +104,18 @@
      You can if you want - but
      if you have successfully posted your key at an add-key service,
      tested it using a jump service, and waited 24 hours for the
-     address book update to propagate to others, that shouldn't be necessary.
- <li>If you have any questions try IRC #i2p or the
-     <a href="http://forum.i2p/viewforum.php?f=10">technical problems section</a> on
-     <a href="http://forum.i2p/">forum.i2p</a>.
-     Good luck and welcome to I2P!
- </ul>
+     address book update to propagate to others, that shouldn't be necessary.</ul>
+<h2>Further Assistance</h2><ul>
+ <li>If you have any questions, the following places are available for support:
+<ul>
+ <li>Our IRC support channel: <ul><li><a href="irc://irc.freenode.net/i2p">#i2p on Freenode</a> 
+ <li>Anonymously via your resident <a href="irc://127.0.0.1:6668/i2p">I2P IRC tunnel</a>.</ul>
+     <li><a href="http://forum.i2p/viewforum.php?f=10">The technical problems section</a> on
+     <a href="http://forum.i2p/">forum.i2p</a>.</ul>
+ </ul><div class="notify">
+<b>Note:</b> This page, the website and the console all need translating into YOUR language if it's not already been done or in progress. Please consider helping the project grow by <a href="http://www.i2p2.i2p/getinvolved.html">volunteering your time</a> to translate. Contact the project via the IRC channel listed above. Thanks in advance!</div>
+<hr><div class="footnote">	
+Document last edited: November 2009.</div>
+</div></div>
  </body>
 </html>
