Add Russian to the eepsite index; prettify the Russian index with the new css. Minor tweaks to the css.
Monotone-Parent: 90db43397b17953c57eeba7c8183baac02ced2ec
Monotone-Revision: 0eddb15e380fd7a07b2ad11b68d96b0063630450

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-01-21T08:18:55
Monotone-Branch: i2p.i2p

--- a/installer/resources/eepsite.help/help/index_ru.html
+++ b/installer/resources/eepsite.help/help/index_ru.html
@@ -2,14 +2,25 @@
  <head>
     <title>Анонимный I2P веб-сервер | Добро пожаловать на ваш I2P-сайт</title>
     <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="eepsite.css" />
+    <link rel="stylesheet" type="text/css" href="lib/eepsite.css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
  </head>
  <body>
 
-
+<div class="fairylights">
+<div class="main">
 <h1>Анонимный I2P веб-сервер</h1>
+<div class="langbar">
+<!-- Most of these languages listed here are yet to be translated -->
+<a href="index.html"><img src="lib/us.png" title="English" alt="English"></a> 
+<a href="index_na.html"><img src="lib/cn.png" title="Chinese" alt="Chinese"></a> 
+<a href="index_de.html"><img src="lib/de.png" title="Deutsch" alt="Deutsch"></a> 
+<a href="index_fr.html"><img src="lib/fr.png" title="Français" alt="Français"></a>
+<a href="index_ru.html"><img src="lib/ru.png" title="Русский" alt="Русский"></a> 
+<a href="index_na.html"><img src="lib/nl.png" title="Nederlands" alt="Nederlands"></a> 
+<a href="index_na.html"><img src="lib/se.png" title="Svenska" alt="Svenska"></a> 
 
+</div>
 <h2>Краткое руководство по анонимному хостингу сайтов в I2P</h2>
 
 <p>
@@ -89,6 +100,6 @@
 <div class="footnote">
 На основе шаблонов: zzz, 07.10.2009 и dr|z3d, Ноябрь 2009
 </div>
-
+</div></div>
 </body>
 </html>
