--- a/installer/resources/eepsite.help/help/index_de.html
+++ b/installer/resources/eepsite.help/help/index_de.html
@@ -13,11 +13,12 @@
 <div class="langbar">
 <!-- Most of these languages listed here are yet to be translated -->
 <a href="index.html"><img src="lib/us.png" title="English" alt="English"></a> 
-<!--    <a href="index_zh.html"><img src="/flags.jsp?c=cn" title="Chinese" alt="Chinese"></a>  -->
-    <a href="index_de.html"><img src="lib/de.png" title="Deutsch" alt="Deutsch"></a> 
-<!--    <a href="index_fr.html"><img src="lib/fr.png" title="Français" alt="Français"></a> -->
-<!--   <a href="index_nl.html"><img src="lib/nl.png" title="Nederlands" alt="Nederlands"></a> -->
-<!--    <a href="index_se.html"><img src="lib/se.png" title="Svenska" alt="Svenska"></a> -->
+<a href="index_na.html"><img src="lib/cn.png" title="Chinese" alt="Chinese"></a> 
+<a href="index_de.html"><img src="lib/de.png" title="Deutsch" alt="Deutsch"></a> 
+<a href="index_fr.html"><img src="lib/fr.png" title="Français" alt="Français"></a>
+<a href="index_ru.html"><img src="lib/ru.png" title="Русский" alt="Русский"></a> 
+<a href="index_na.html"><img src="lib/nl.png" title="Nederlands" alt="Nederlands"></a> 
+<a href="index_na.html"><img src="lib/se.png" title="Svenska" alt="Svenska"></a> 
 </div>
 <p>Diese ist Ihre <strong>Eepsite</strong>, Ihre Web-Präsens über I2P. Editieren Sie einfach die Dateien unter <em>i2p/eepsite/docroot/</em>
 und nachdem Sie den Anweisungen weiter unten gefolgt sind, werden Sie –
