--- a/installer/resources/eepsite.help/help/index_fr.html
+++ b/installer/resources/eepsite.help/help/index_fr.html
@@ -14,10 +14,10 @@
 <a href="index.html"><img src="lib/us.png" title="English" alt="English"></a> 
 <a href="index_na.html"><img src="lib/cn.png" title="Chinese" alt="Chinese"></a> 
 <a href="index_de.html"><img src="lib/de.png" title="Deutsch" alt="Deutsch"></a> 
-<a href="index_fr.html"><img src="lib/fr.png" title="Français" alt="Français"></a> 
+<a href="index_fr.html"><img src="lib/fr.png" title="Français" alt="Français"></a>
+<a href="index_ru.html"><img src="lib/ru.png" title="Русский" alt="Русский"></a> 
 <a href="index_na.html"><img src="lib/nl.png" title="Nederlands" alt="Nederlands"></a> 
 <a href="index_na.html"><img src="lib/se.png" title="Svenska" alt="Svenska"></a> 
-
 </div>
 <h2>Un mini guide pour faire un serveur web anonyme utilisant I2P</h2>
 
