Russian translation updated to dr|z3d's template, links to the Russian page moved to the alphabetically sorted position
Monotone-Parent: 64b04621a995cd407de0f8899b4ddfb9e93262b3
Monotone-Revision: 4755aa75bada4925580e70471d2cbe82d52f4e1e

Monotone-Author: forget@mail.i2p
Monotone-Date: 2010-01-21T08:53:31
Monotone-Branch: i2p.i2p

--- a/installer/resources/eepsite.help/help/index_ru.html
+++ b/installer/resources/eepsite.help/help/index_ru.html
@@ -1,59 +1,58 @@
 <html>
  <head>
-    <title>Анонимный I2P веб-сервер | Добро пожаловать на ваш I2P-сайт</title>
-    <link rel="shortcut icon" href="favicon.ico" />
+  <title>Анонимный I2P веб-сервер | Добро пожаловать на ваш I2P-сайт</title>
+  <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" href="lib/eepsite.css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
  </head>
  <body>
-
 <div class="fairylights">
 <div class="main">
-<h1>Анонимный I2P веб-сервер</h1>
+ <h1>Анонимный I2P веб-сервер</h1>
 <div class="langbar">
 <!-- Most of these languages listed here are yet to be translated -->
 <a href="index.html"><img src="lib/us.png" title="English" alt="English"></a> 
-<a href="index_na.html"><img src="lib/cn.png" title="Chinese" alt="Chinese"></a> 
+<a href="index_na.html"><img src="lib/cn.png" title="中文" alt="中文"></a> 
 <a href="index_de.html"><img src="lib/de.png" title="Deutsch" alt="Deutsch"></a> 
-<a href="index_fr.html"><img src="lib/fr.png" title="Français" alt="Français"></a>
-<a href="index_ru.html"><img src="lib/ru.png" title="Русский" alt="Русский"></a> 
+<a href="index_fr.html"><img src="lib/fr.png" title="Français" alt="Français"></a> 
 <a href="index_na.html"><img src="lib/nl.png" title="Nederlands" alt="Nederlands"></a> 
-<a href="index_na.html"><img src="lib/se.png" title="Svenska" alt="Svenska"></a> 
+<a href="index_ru.html"><img src="lib/ru.png" title="Русский" alt="Русский"></a> 
+<a href="index_se.html"><img src="lib/se.png" title="Svenska" alt="Svenska"></a> 
 
 </div>
 <h2>Краткое руководство по анонимному хостингу сайтов в I2P</h2>
 
 <p>
-Эта страничка — Ваш I2P-сайт, Ваш собственный анонимный I2P-вебсервер. Отредактируйте файлы в директории ~/.i2p/eepsite/docroot/ (Linux) или %APPDATA%\I2P\eepsite\docroot\ (Windows), выполните шаги из инструкции ниже и Ваш сайт увидят другие пользователи.
-
-В I2P сайты адресуются по их «ключу», который выглядит как очень длинная Base64 строка. Этот «ключ» частично выполняет функцию IP-адреса и указан на
+Эта страничка - Ваш I2P-сайт, Ваш собственный анонимный I2P-вебсервер. Отредактируйте файлы в директории ~/.i2p/eepsite/docroot/ (Linux) или %APPDATA%\I2P\eepsite\docroot\ (Windows), выполните шаги из инструкции ниже и Ваш сайт увидят другие пользователи.
+ 
+В I2P сайты адресуются по их «ключу», который выглядит как очень длинная Base64 строка. Этот «ключ» частично выполняет функцию IP-адреса и указан на 
 <a href="http://127.0.0.1:7657/i2ptunnel/edit.jsp?tunnel=3">странице настроек туннеля i2p-сайта</a>. Далее мы расскажем Вам, как присвоить своему ключу имя типа «mysite.i2p» и запустить Ваш i2p-сайт.
 </p>
-
+ 
 <p>Попробуйте открыть локально свой i2p-сайт через <a href="http://127.0.0.1:7658/">http://127.0.0.1:7658/</a>.
 </p>
 
 <h2>Как запустить и анонсировать свой I2P-сайт</h2>
-
+ 
 Ваш i2p-сайт по умолчанию остановлен. Хотя Вы его и запустили, другим людям трудно его найти, ведь у сайта пока нет имени, а Ваш очень-длинный-Base64-ключ никому не известен. Вы, конечно, можете просто выдавать людям этот очень-длинный-Base64-ключ, но, к счастью, в I2P есть механизм адресных книг и несколько простых способов для сообщения людям о своем сайте. Далее подробные инструкции.
-
+ 
 <ul>
 <li>Выберите имя для своего сайта (<i>something</i>.i2p). Используйте только символы в нижнем регистре. Загляните в <a href="http://127.0.0.1:7657/susidns/addressbook.jsp?book=router&filter=none">адресную книгу</a> Вашего маршрутизатора или в файл i2p/hosts.txt для проверки, возможно такое имя уже кто-то занял. Введите новое имя Вашего сайта на <a href="http://127.0.0.1:7657/i2ptunnel/edit.jsp?tunnel=3">странице настроек туннеля для i2p-сайта</a> в поле «Имя веб-сайта». Это заменит имя сайта по умолчанию «mysite.i2p». Поставьте галочку «Автозапуск». Ваш сайт будет доступен извне всегда, когда запущен Ваш маршрутизатор. Не забудьте нажать «Сохранить».
 
 
 <li>Кликните <a href="http://127.0.0.1:7657/i2ptunnel/index.jsp">в менеджере туннелей</a> на кнопке запуска вашего сайта. Вы должны увидеть запись «i2p-сайт» в списке «Локальные туннели» в левой части <a href="http://127.0.0.1:7657/index.jsp">консоли маршрутизатора</a>. С этого момента Ваш сайт запущен.
-
+     
 <li>Выделите всю строчку «Локальный адрес назначения» на <a href="http://127.0.0.1:7657/i2ptunnel/edit.jsp?tunnel=3">странице настроек туннеля вашего I2P-сайта</a> и скопируйте её. Убедитесь, что Вы скопировали строку целиком – ее длина больше 500 символов, строка должна заканчиваться на «AAAA».
 
 <li>Введите имя и вставьте ключ в Вашу <a href="http://127.0.0.1:7657/susidns/addressbook.jsp?book=master">основную адресную книгу</a>. Нажмите «Добавить» для добавления адреса в адресную книгу.
-
+ 
 <li>Введите в браузере имя Вашего сайта (<i>something</i>.i2p), Вы должны снова попасть на эту страницу. Надеемся, что это сработало.
-
-<li>Перед тем как Вы сообщите миру о своем новом сайте, имеет смысл добавить на него какой-нибудь контент. Зайдите в директорию ~/.i2p/eepsite/docroot/ (Linux) или %APPDATA%\I2P\eepsite\docroot\ (Windows) и скопируйте этот документ (index.html) в help.html, чтобы к нему можно было обращаться. Теперь Вы можете отредактировать index.html и добавить в него свой текст, картинки, все, чем Вы хотите поделиться с миром. 
+ 
+<li>Перед тем как Вы сообщите миру о своем новом сайте, имеет смысл добавить на него какой-нибудь контент. Зайдите в директорию ~/.i2p/eepsite/docroot/ (Linux) или %APPDATA%\I2P\eepsite\docroot\ (Windows) и замените заготовку страницы index.html на Вашу информацию. Есть поддержка виртуальных папок, так что можно выкладывать файлы из поддиректорий. Если Вам нужна заготовка простого сайта, не стесняйтесь взять за основу <a href="pagetemplate.html">эту страницу</a> и <a href="lib/">эти элементы оформления</a>!
 </ul>
 
 <h2>Зарегистрируйте свой .I2P домен</h2><ul>
-
+ 
 <li>Теперь пора добавить Ваш сайт в адресные книги, расположенные на сайтах-каталогах, например <a href="http://stats.i2p/">stats.i2p</a>. Введите имя и ключ своего сайта через веб-интерфейс нескольких таких сайтов-каталогов. Вот <a href="http://stats.i2p/i2p/addkey.html">форма для ввода ключа на сайте stats.i2p</a>. Напоминаем, ключ — это вся строка «Локальный адрес назначения» на <a href="http://127.0.0.1:7657/i2ptunnel/edit.jsp?tunnel=3">странице настройки туннеля «I2P webserver»</a>. Проверьте, что Вы скопировали его целиком, включая  «AAAA» на конце. Не забудьте нажать «Add a key». Дождитесь пока система отрапортует, что ключ был добавлен. Поскольку многие маршрутизаторы периодически обновляют свои адресные книги, обращаясь к этим сайтам-каталогам, уже через несколько часов кто-нибудь откроет Ваш сайт, просто набрав <i>something</i>.i2p в адресной строке браузера.
 </ul>
 
@@ -81,25 +80,23 @@
 Некоторые сайты рекомендуют вставлять в анонс Ваш очень-длинный-Base64-ключ. Вы, конечно, можете, если хотите. На самом деле, это не нужно, раз Вы уже добавили свой ключ на jump-сервисе, проверили его работу и подождали 24 часа, чтобы обновление адресной книги успело разойтись по всему I2P-миру.
 </ul>
 
-
+	 
 <h2>А что потом? </h2>
 <ul>
 <li>Если у вас остались вопросы, добро пожаловать на:
-
+ 
 <ul>
- <li>Наш IRC-канал поддержки:
+ <li>Наш IRC-канал поддержки: 
  <ul>
-    <li><a href="irc://irc.freenode.net/i2p">#i2p в сети Freenode</a>
+    <li><a href="irc://irc.freenode.net/i2p">#i2p в сети Freenode</a> 
     <li>Анонимно доступен через <a href="irc://127.0.0.1:6668/i2p">встроенный IRC-туннель</a> Вашего I2P-маршрутизатора.
  </ul>
  <li>Раздел форума <a href="http://forum.i2p/viewforum.php?f=10">Technical Problems</a>.
 </ul>
 </ul>
-
-<hr>
-<div class="footnote">
-На основе шаблонов: zzz, 07.10.2009 и dr|z3d, Ноябрь 2009
+ 
+<hr><div class="footnote">	
+На основе шаблонов: zzz, 07.10.2009 и dr|z3d, Ноябрь 2009.</div>
 </div>
-</div></div>
-</body>
+ </body>
 </html>
