No more port 8887 in de troubleshoot
Monotone-Parent: d84bac5f340fb1f9f4826a3326847a84cf32b1a1
Monotone-Revision: 9e658a1b1e62b486a399a162ceb27fe3461a9eb0

Monotone-Author: echelon@mail.i2p
Monotone-Date: 2010-02-06T16:52:16
Monotone-Branch: i2p.i2p

--- a/installer/resources/readme/readme_de.html
+++ b/installer/resources/readme/readme_de.html
@@ -62,8 +62,10 @@
 <p>Sei geduldig - Am Anfang des ersten Starts kann I2P lange brauchen, da es 
   dann Verbindungen sucht. Falls nach 30 Minuten Deine 
   "Active: connected/recent" Zahl noch immer weniger als 10 Verbindungen 
-  aufzeigt, solltest Du Port 8887 auf Deiner Firewall &ouml;ffnen um 
-  f&uuml;r bessere Verbindung zu sorgen.
+  aufzeigt, solltest Du den I2P Port auf Deiner Firewall &ouml;ffnen um 
+  f&uuml;r bessere Verbindung zu sorgen. Den bei dir benutzten I2P Port 
+  (bei jeder Installation setzt I2P einen anderen) siehst Du auf der 
+  <a href="config.jsp">Konfigurationsseite</a>.
   Wenn Du gar keine Eepsites bekommst (auch nicht 
   <a href="http://www.i2p2.i2p/index_de.html">www.i2p2.i2p</a>), stelle sicher, dass Dein 
   Internet Browser auf den Proxy 127.0.0.1 Port 4444 eingestellt ist.
