* eepsite: Add some help to index.html
Monotone-Parent: ac780d1b07e57918820b8abe632b40f5ea7fc00a
Monotone-Revision: 493577a45709f75a0c82d9e83644d67922123156

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-02-26T16:46:12
Monotone-Branch: i2p.i2p

--- a/installer/resources/eepsite.help/index.html
+++ b/installer/resources/eepsite.help/index.html
@@ -1,5 +1,13 @@
 <html>
+<!--
+#
+# If you have a 'split' directory installation, with configuration
+# files in ~/.i2p (Linux) or %APPDATA%\I2P (Windows), be sure to
+# edit the file in the configuration directory, NOT the install directory.
+#
+-->
 <head>
+<!-- remove the following line to stop redirecting to the help page -->
 <meta http-equiv="refresh" content="1;url=/help/" />
 <title>I2P Anonymous Webserver</title>
 </head>
