IRC links on readmes and initialNews
Monotone-Parent: e56b0465b598b1e9be2819179457b94260e70915
Monotone-Revision: 306ad6d93001a37d945de38b9f12ec19bb820697

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-04-18T19:57:42
Monotone-Branch: i2p.i2p

--- a/installer/resources/readme/readme.html
+++ b/installer/resources/readme/readme.html
@@ -79,6 +79,8 @@ up, you can:</p>
   be sure your browser proxy is set to 127.0.0.1 port 4444. You may also want 
   to review the information on the <a href="http://www.i2p2.i2p/">I2P website</a>, 
   post up messages to the <a href="http://forum.i2p2.de/">I2P discussion forum</a>, 
-  or swing by #i2p or #i2p-chat on IRC at <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, 
+  or swing by
+  <a href="irc://127.0.0.1:6668/i2p-help">#i2p-help</a>, <a href="irc://127.0.0.1:6668/i2p">#i2p</a> or <a href="irc://127.0.0.1:6668/i2p-chat">#i2p-chat</a>
+  on IRC at <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, 
   irc.postman.i2p or irc.freshcoffee.i2p (they're linked together).</p>
 <hr>
