--- a/installer/resources/readme/readme_de.html
+++ b/installer/resources/readme/readme_de.html
@@ -72,6 +72,8 @@
   Vielleicht m&ouml;chtest Du auch die Informationen lesen, die auf der 
   <a href="http://www.i2p2.i2p/index_de.html">I2P website</a> sind, Nachrichten lesen und 
   ins <a href="http://forum.i2p2.de/">I2P discussion forum</a> posten, oder 
-  chatten auf #i2p or #i2p-chat beim IRC auf 
+  chatten auf
+  <a href="irc://127.0.0.1:6668/i2p-help">#i2p-help</a>, <a href="irc://127.0.0.1:6668/i2p-de">#i2p-de</a>, <a href="irc://127.0.0.1:6668/i2p">#i2p</a> oder <a href="irc://127.0.0.1:6668/i2p-chat">#i2p-chat</a>
+  beim IRC auf 
   <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p 
   oder irc.freshcoffee.i2p (die verbunden sind).</p><hr />
