--- a/installer/resources/readme/readme_nl.html
+++ b/installer/resources/readme/readme_nl.html
@@ -57,5 +57,6 @@ Als je in het geheel geen eepsites kan zien (zelfs <a href="http://www.i2p2.i2p/
 controleer dan nog eens of de proxy van je browser op 127.0.0.1 poort 4444 staat.
 Je zou best ook de informatie controleren op de
 <a href="http://www.i2p2.i2p/">I2P website</a>, of plaats een bericht op het
-<a href="http://forum.i2p/">I2P discussie forum</a>, of kom langs bij #i2p of
-#i2p-chat op IRC bij de kanalen <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p of irc.freshcoffee.i2p (ze linken allemaal door naar elkaar).</p><hr />
+<a href="http://forum.i2p/">I2P discussie forum</a>, of kom langs bij
+ <a href="irc://127.0.0.1:6668/i2p-help">#i2p-help</a>, <a href="irc://127.0.0.1:6668/i2p-nl">#i2p-nl</a>, <a href="irc://127.0.0.1:6668/i2p">#i2p</a> of <a href="irc://127.0.0.1:6668/i2p-chat">#i2p-chat</a>
+ op IRC bij de kanalen <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p of irc.freshcoffee.i2p (ze linken allemaal door naar elkaar).</p><hr />
