--- a/installer/resources/readme/readme_sv.html
+++ b/installer/resources/readme/readme_sv.html
@@ -95,7 +95,8 @@ f&ouml;rs&auml;kra dig om att din webbl&auml;sare &auml;r inst&auml;lld till att
 Du kanske ocks&aring; vill kika p&aring; information p&aring;  
 <a href="http://www.i2p2.i2p/">I2Ps webbsida</a>, fr&aring;ga fr&aring;gor p&aring;  
 <a href="http://forum.i2p2.de/">I2P diskussions forumet</a>, eller kika 
-f&ouml;rbi #i2p eller
-#i2p-chat p&aring; IRC på <a 
+f&ouml;rbi 
+ <a href="irc://127.0.0.1:6668/i2p-help">#i2p-help</a>, <a href="irc://127.0.0.1:6668/i2p">#i2p</a> eller <a href="irc://127.0.0.1:6668/i2p-chat">#i2p-chat</a>
+p&aring; IRC på <a 
 href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p 
 eller irc.freshcoffee.i2p (de &auml;r alla sammankopplade).</p><hr />
