* Eepsite: Set no-cache in redirecting page
Monotone-Parent: e541893d9d1d5dae8ea8aeeb089292d50c3a0c95
Monotone-Revision: b387ad6fae853b61c49a573e75622f01cdb64e18

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-05-15T14:19:41
Monotone-Branch: i2p.i2p

--- a/installer/resources/eepsite.help/index.html
+++ b/installer/resources/eepsite.help/index.html
@@ -7,8 +7,10 @@
 #
 -->
 <head>
-<!-- remove the following line to stop redirecting to the help page -->
+<!-- remove the following three lines to stop redirecting to the help page -->
 <meta http-equiv="refresh" content="1;url=/help/" />
+<meta http-equiv="pragma" content="no-cache">
+<meta http-equiv="cache-control" content="no-cache">
 <title>I2P Anonymous Webserver</title>
 </head>
 <body>
