--- a/installer/resources/readme/readme_zh.html
+++ b/installer/resources/readme/readme_zh.html
@@ -1,3 +1,4 @@
+<div lang="zh">
 <div align="right"> 
   <div class="langbox" align="right"><a href="/index.jsp?lang=en"><img src="/flags.jsp?c=us" title="English" alt="English"></a> 
     <a href="/index.jsp?lang=zh"><img src="/flags.jsp?c=cn" title="Chinese" alt="Chinese"></a> 
@@ -41,3 +42,4 @@
 或 
 <a href="irc://127.0.0.1:6668/i2p-chat">#i2p-chat</a>
 这两个 IRC 频道上询问。 (这些服务器上的这两个频道是相通的)。</p><hr>
+</div>
