--- a/installer/resources/readme/readme_sv.html
+++ b/installer/resources/readme/readme_sv.html
@@ -1,3 +1,4 @@
+<div lang="sv">
 <div align="right">
 <div class="langbox" align="right"><a href="/index.jsp?lang=en"><img src="/flags.jsp?c=us" title="English" alt="English"></a> <a href="/index.jsp?lang=zh"><img src="/flags.jsp?c=cn" title="Chinese" alt="Chinese"></a> <a href="/index.jsp?lang=de"><img src="/flags.jsp?c=de" title="Deutsch" alt="Deutsch"></a> <a href="/index.jsp?lang=fr"><img src="/flags.jsp?c=fr" title="Fran&ccedil;ais" alt="Fran&ccedil;ais"></a> <a href="/index.jsp?lang=nl"><img src="/flags.jsp?c=nl" title="Nederlands" alt="Nederlands"></a> <a href="/index.jsp?lang=ru"><img src="/flags.jsp?c=ru" title="Русский" alt="Русский"></a> <a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
 </div>
@@ -95,4 +96,4 @@ f&ouml;rbi
  <a href="irc://127.0.0.1:6668/i2p-help">#i2p-help</a>, <a href="irc://127.0.0.1:6668/i2p">#i2p</a> eller <a href="irc://127.0.0.1:6668/i2p-chat">#i2p-chat</a>
 p&aring; IRC på <a 
 href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p 
-eller irc.freshcoffee.i2p (de &auml;r alla sammankopplade).</p><hr />
+eller irc.freshcoffee.i2p (de &auml;r alla sammankopplade).</p><hr /></div>
