Unfuzzy susidns translation, typo fixes for eepsite help. (thx _4get)
Monotone-Parent: c39965188b8c0725f2eaad6699da9052b8e15e62
Monotone-Revision: 6d2f1d8e2c4e0d3476f339c92d781948fa63b611

Monotone-Author: duck@mail.i2p
Monotone-Date: 2010-07-10T11:49:40
Monotone-Branch: i2p.i2p

--- a/installer/resources/eepsite.help/help/index_nl.html
+++ b/installer/resources/eepsite.help/help/index_nl.html
@@ -88,7 +88,7 @@
      http://stats.i2p/cgi-bin/jump.cgi?a=<i>mijnsite</i>.i2p of
      http://i2host.i2p/cgi-bin/i2hostjump?<i>mijnsite</i>.i2p
      in je browser.
-     Zodra dit werkt kan je andere hierover vertellen.
+     Zodra dit werkt kan je anderen hierover vertellen.
  <li>Sommigen kijken op eepsite lijsten zoals
      <a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p/status.php</a> voor nieuwe eepsites, dus kan je zo een aantal bezoekers krijgen.
      Maar er zijn genoeg andere manieren om je eepsite te promoten. Hier zijn er een aantal:
@@ -101,7 +101,7 @@
      </ul>
      </ul>
 <h2>Verdere assistentie</h2><ul>
- <li>In dien je nog vragen hebt, de volgende plaatsten bieden support:
+ <li>In dien je nog vragen hebt, de volgende plaatsen bieden support:
 <ul>
  <li>Ons IRC support kanaal: <ul><li><a href="irc://irc.freenode.net/i2p">#i2p op Freenode</a> 
  <li>Anoniem via onze eigen <a href="irc://127.0.0.1:6668/i2p">I2P IRC tunnel</a>.</ul>
