Fix typo (trac #32)
Monotone-Parent: b1c4519ef113edad3fc39c406cc9d8b26dafe7c6
Monotone-Revision: ec25324d23bed454c37816273186d7a12ab27110

Monotone-Author: duck@mail.i2p
Monotone-Date: 2010-07-30T08:54:21
Monotone-Branch: i2p.i2p

--- a/installer/resources/readme/readme_de.html
+++ b/installer/resources/readme/readme_de.html
@@ -48,7 +48,7 @@
 <a href="http://jetty.mortbay.org/">Jetty</a> Instanz horcht auf 
 <a href="http://127.0.0.1:7658/">http://127.0.0.1:7658/</a>. Platziere einfach 
    Deine Dateien in das <code>eepsite/docroot/</code> Verzeichnis (oder jedes 
-   standart JSP/Servlet <code>.war</code> unter <code>eepsite/webapps</code>, 
+   Standard-JSP/Servlet <code>.war</code> unter <code>eepsite/webapps</code>, 
    oder CGI Scripte unter <code>eepsite/cgi-bin</code>) und schon sind sie 
    verf&uuml;gbar.  Nach dem Start des <a href="/i2ptunnel/">Eepsite tunnels</a>
    der darauf zeigt ist Deine Eepsite f&uuml;r Andere verf&uuml;gbar. 
