--- a/installer/resources/eepsite.help/help/index_ru.html
+++ b/installer/resources/eepsite.help/help/index_ru.html
@@ -17,7 +17,7 @@
 <a href="index_fr.html"><img src="lib/fr.png" title="Français" alt="Français"></a> 
 <a href="index_nl.html"><img src="lib/nl.png" title="Nederlands" alt="Nederlands"></a> 
 <a href="index_ru.html"><img src="lib/ru.png" title="Русский" alt="Русский"></a> 
-<a href="index_se.html"><img src="lib/se.png" title="Svenska" alt="Svenska"></a> 
+<a href="index_sv.html"><img src="lib/se.png" title="Svenska" alt="Svenska"></a> 
 
 </div>
 <h2>Краткое руководство по анонимному хостингу сайтов в I2P</h2>
